[package]
name = "systime_converter"
version = "0.1.0"
authors = ["nlburgin <neil@neilburgin.com>"]
repository = "https://github.com/nlburgin/systime_converter"
license = "ISC"
description = "A library providing one single function: convert a standard-libary SystemTime into the much more user-friendly DateTime format used by the Chrono crate."
[dependencies]
chrono = "0.4.0"